# demo-badges

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  multiplatform-build.yml  multiplatform-tests.yml
BinaryTree/: CMakeLists.txt
BinaryTree/src/: BinaryTree.hpp  BinaryTree.tpp
BinaryTree/test/: BinaryTreeModuleTests.cpp  CMakeLists.txt
Queue/: CMakeLists.txt
Queue/src/: LimitedSizeQueue.hpp  LimitedSizeQueue.tpp  QueueExceptions.hpp  QueueVirtual.hpp
Queue/test/: CMakeLists.txt  LimitedSizeQueueModuleTests.cpp
Stack/: CMakeLists.txt
Stack/src/: LimitedSizeStack.hpp  LimitedSizeStack.tpp  StackExceptions.hpp  StackVirtual.hpp
Stack/test/: CMakeLists.txt  LimitedSizeStackModuleTests.cpp  bracketsOperations.cpp  bracketsOperations.hpp
